# opera-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  launch.sh
.claude/: BOARDPLAN.md  CLAUDE.md  CLAUDE_CODEX.md  DOCKER.md  MOVEGEN_PLAN.md  PROGRESS.md  SEARCH_EVAL.md  UCI.md
.github/: BRANCH_PROTECTION_SETUP.md
.github/workflows/: branch-protection.yml  ci.yml  maintenance.yml  uci-rust.yml
.kiro/specs/Search-Evaluation/: design.md  requirements.md  tasks.md
.kiro/specs/UCI Protocol/: design.md  requirements.md  tasks.md
cpp/: CMakeLists.txt  debug_endgame.cpp  debug_failing_perft  debug_king_mixed  debug_knight.cpp  quick_validation
cpp/debug/: README.md  debug_attack_gen  debug_attack_gen.cpp  debug_castling_through_check  debug_castling_through_check.cpp  debug_failing_perft  debug_failing_perft.cpp  debug_fix_test  debug_fix_test.cpp  debug_illegal_move  debug_illegal_move.cpp  debug_king_mixed.cpp  debug_multiple_bishops  debug_multiple_bishops.cpp  debug_pawn.cpp  debug_perft  debug_perft.cpp  debug_pinned_piece  debug_pinned_piece.cpp  debug_promotion.cpp  debug_rook_blocked  debug_rook_blocked.cpp  debug_rook_captures  debug_rook_captures.cpp  debug_sliding.cpp  debug_stalemate_pawns  debug_stalemate_pawns.cpp  debug_starting_position  debug_starting_position.cpp  debug_test_position  debug_test_position.cpp  perft_debug.cpp  perft_debug_simple.cpp  quick_perft_validation.cpp  run_performance_tests.sh  square_debug.cpp
cpp/include/: Board.h  MoveGen.h  Types.h  UCIBridge.h
cpp/include/eval/: evaluator_interface.h  handcrafted_eval.h  morphy_eval.h
cpp/include/search/: alphabeta.h  move_ordering.h  search_engine.h  see.h  transposition_table.h
cpp/src/: UCIBridge.cpp  debug_test.cpp  main.cpp
cpp/src/board/: Board.cpp  MoveGenerator.cpp
cpp/src/eval/: handcrafted_eval.cpp  morphy_eval.cpp
cpp/src/perft/: PerftRunner.cpp
cpp/src/search/: alphabeta.cpp  move_ordering.cpp  search_engine.cpp  see.cpp  transposition_table.cpp
cpp/src/utils/: Types.cpp
cpp/tests/: AdvancedEvalKnownLimitations.md  AdvancedEvalTest.cpp  AlphaBetaTest.cpp  BoardPerformanceTest.cpp  BoardTest.cpp  CMakeLists.txt  ChessRulesTest.cpp  EvalCachingTest.cpp  EvaluatorInterfaceTest.cpp  HandcraftedEvalTest.cpp  KingMoveTest.cpp  KnightMoveTest.cpp  MemoryAuditTest.cpp  MorphyEvalTest.cpp  MorphyStyleValidationTest.cpp  MoveGenTest.cpp  MoveOrderingTest.cpp  PawnMoveTest.cpp  PerformanceBenchmarkTest.cpp  PerformanceTest.cpp  SearchControlTest.cpp  SearchEngineTest.cpp  SearchEvalIntegrationTest.cpp  SearchOptimizationTest.cpp  SlidingPieceTest.cpp  StaticExchangeTest.cpp  TacticalEPDTest.cpp  TranspositionTableTest.cpp  UCIOptionsTest.cpp
docs/: linux-migration.md  migration-complete.md  perft-bug-analysis.md  perft-test-case-issue.md  test-failure-diagnosis.md
python/: requirements.txt
rust/: Cargo.toml  build.rs
rust/benches/: uci_benchmarks.rs
rust/config/: logging-dev.toml  logging-prod.toml  logging-test.toml  logging-uci-debug.toml
rust/docs/: never_panic_guidelines.md
rust/src/: error.rs  ffi.rs  lib.rs  logging.rs  main.rs  runtime.rs  testing.rs
rust/src/bridge/: board.rs  mod.rs  safety_tests.rs  search.rs
rust/src/time/: mod.rs  policies.rs  timer.rs
rust/src/uci/: commands.rs  engine.rs  event_loop.rs  mod.rs  parser.rs  response.rs  sanitizer.rs  state.rs
rust/src/uci/handlers/: basic.rs  mod.rs  newgame.rs  position.rs
rust/tests/: async_integration.rs  basic_functionality_test.rs  integration_ffi_test.rs  position_integration.rs  rust_only_test.rs  search_integration_tests.rs  time_management_tests.rs  uci_event_loop_integration.rs  uci_handshake_integration.rs  uci_parser_comprehensive.rs
scripts/: run_test_suite.sh
shared/configs/: engine.yaml
